# nur-cli

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  mkdocs.yml
docs/: authentication.md  commands.md  configuration.md  ecosystem.md  index.md  integrations-ax-graphjin.md  quickstart.md  security.md  setup.md  tools.md  troubleshooting.md  tui.md  vision.md
docs/stylesheets/: extra.css
scripts/: probe_antigravity.py  probe_antigravity2.py  reimport_antigravity.py
skills/fractal/: SKILL.md
skills/penecho/: SKILL.md
skills/resume-claude/: SKILL.md
skills/resume-codex/: SKILL.md
skills/resume-cursor/: SKILL.md
skills/resume-grok/: SKILL.md
skills/resume-meta/: SKILL.md
skills/resume-session/: CORE.md  SKILL.md  session_reader.py
skills/scan/: SKILL.md
skills/t3code/: SKILL.md
src/: ade.rs  auth.rs  bench.rs  bootstrap.rs  cli.rs  config.rs  error.rs  fractal.rs  gateway.rs  gepa.rs  local.rs  main.rs  open_uri.rs  penecho.rs  pricing.rs  providers.rs  t3code.rs  theme.rs  usage.rs
src/agent/: chagent.rs  continuous.rs  fusion.rs  hooks.rs  loop.rs  memory.rs  mod.rs  permissions.rs  prompt.rs  receipt.rs  session.rs  skill_cache.rs  skill_intents.json  skill_intents.rs  skills.rs  subagent.rs  swarm.rs
src/api/: anthropic.rs  chat.rs  client.rs  failover.rs  fusion.rs  gemini.rs  mod.rs  models.rs  sse.rs  types.rs
src/ecosystem/: mod.rs  packs.rs  skills.rs
src/oauth/: browser.rs  flows.rs  mod.rs
src/plugins/: catalog.rs  mod.rs  registry.rs
src/tools/: akarso.rs  apply_patch.rs  bash.rs  browser.rs  capabilities.rs  edit_file.rs  excalidraw.rs  executor_tool.rs  fractal_tool.rs  git_diff.rs  graphify.rs  graphjin.rs  list_dir.rs  media.rs  memory_tool.rs  mod.rs  multi_edit.rs  omp.rs  penecho_tool.rs  plur.rs  read_file.rs  ruflo.rs  sandbox.rs  shell.rs  skill_tool.rs  spill.rs  submit_plan.rs  t3code_tool.rs  tldraw.rs  undo.rs  web_fetch.rs  web_search.rs
src/tui/: ansi.rs  app.rs  grid.rs  input.rs  markdown.rs  mod.rs  scrollbar.rs  ui.rs  wrap.rs
src/tui/app/: commands.rs
