[package]
name = "meta-cli"
version = "0.5.8"
edition = "2021"
description = "Meta CLI (unofficial) - coding agent for Meta Model API"
license = "MIT"
authors = ["meta-cli contributors"]
repository = "https://github.com/nuroctane/meta-cli"
readme = "README.md"
keywords = ["meta", "muse", "ai", "cli", "agent"]
categories = ["command-line-utilities", "development-tools"]

# Single binary; install scripts copy meta(.exe) → muse(.exe) for the alias.
[[bin]]
name = "meta"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"
thiserror = "1"
ratatui = "0.29"
crossterm = "0.28"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
walkdir = "2"
ignore = "0.4"
futures-util = "0.3"
tokio-util = "0.7"
unicode-width = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rpassword = "7"
colored = "2"
arboard = "3"
