[package]
name = "meta-cli"
version = "0.7.0"
edition = "2021"
description = "Fully loaded unofficial Meta Model API coding agent — vision (look/extract_frames), streaming TUI, tools + sandbox, Graphify/PLUR/Ruflo/Executor + 800+ skills, subagents, atomic sessions, meta doctor"
license = "GPL-3.0-or-later"
authors = ["meta-cli contributors"]
repository = "https://github.com/nuroctane/meta-cli"
readme = "README.md"
keywords = ["meta", "muse", "ai", "cli", "agent", "tui", "coding-agent", "graphify", "skills"]
categories = ["command-line-utilities", "development-tools"]

# Single binary; install scripts copy meta(.exe) → muse(.exe) for the alias.
[[bin]]
name = "meta"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"
thiserror = "1"
ratatui = "0.29"
# Pinned to the last release on ratatui 0.29 (0.3.6+ moved to ratatui-core).
tui-markdown = "=0.3.5"
# Pinned to the last releases on ratatui 0.29 (newer versions moved to ratatui 0.30 / ratatui-core).
tui-scrollview = "=0.5.1"
ratatui-image = { version = "=8.0.1", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
crossterm = "0.28"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
walkdir = "2"
ignore = "0.4"
futures-util = "0.3"
tokio-util = "0.7"
unicode-width = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rpassword = "7"
colored = "2"
arboard = "3"
