[package]
name = "nur-cli"
version = "0.19.1"
edition = "2021"
description = "NurCLI — fully loaded multi-provider coding agent (TUI, vision, tools, sandbox, Graphify/PLUR/Ruflo/Executor + 800+ skills). Optional Meta Model API provider (muse-spark) among many."
license = "GPL-3.0-or-later"
authors = ["NurCLI contributors"]
repository = "https://github.com/nuroctane/nur-cli"
readme = "README.md"
keywords = ["nur", "nurcli", "ai", "cli", "agent", "tui", "coding-agent", "graphify", "skills"]
categories = ["command-line-utilities", "development-tools"]

# Single binary: `nur` (no muse alias).
[[bin]]
name = "nur"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"
thiserror = "1"
ratatui = "0.29"
# Pinned to the last release on ratatui 0.29 (0.3.6+ moved to ratatui-core).
tui-markdown = "=0.3.5"
# Pinned to the last releases on ratatui 0.29 (newer versions moved to ratatui 0.30 / ratatui-core).
tui-scrollview = "=0.5.1"
# Inline image peeks (sixel/kitty/iTerm2). Heavy (image codecs) — behind the
# default `image-peek` feature so `--no-default-features` yields a leaner build.
ratatui-image = { version = "=8.0.1", default-features = false, features = ["crossterm"], optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"], optional = true }
crossterm = "0.28"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
walkdir = "2"
ignore = "0.4"
futures-util = "0.3"
tokio-util = "0.7"
unicode-width = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rpassword = "7"
colored = "2"
arboard = "3"
sha2 = "0.11.0"
base64 = "0.22.1"

[features]
default = ["image-peek"]
# Inline image peeks in the TUI via ratatui-image + the image codecs.
# Disable (`--no-default-features`) to drop the heavy image stack; peeks then
# fall back to the text/diff view.
image-peek = ["dep:ratatui-image", "dep:image"]
